--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,39 @@
-body {
-  background-color: blue;
+/* import of google font Rubik with weights: 300 400 500 */
+@import url('https://fonts.googleapis.com/css2?family=League+Spartan&family=Rubik:wght@300;400;500&display=swap');
+
+/* design colors set as variables */
+
+:root {
+/* primary color pallette */
+
+  --Blue: hsl(246, 80%, 60%);
+  /* work */
+  --light-red: hsl(15, 100%, 70%);
+  /* play */
+  --Soft-blue: hsl(195, 74%, 62%);
+  /* study */
+  --Light-red: hsl(348, 100%, 68%);
+  /* excercise */
+  --Lime-green: hsl(145, 58%, 55%);
+  /* social */
+  --Violet: hsl(264, 64%, 52%);
+  /* self care */
+  --Soft-orange: hsl(43, 84%, 65%);
+
+/* neutral color pallette */
+
+  /* background */
+  --Very-dark-blue: hsl(226, 43%, 10%);
+
+  --Dark-blue: hsl(235, 46%, 20%);
+  --Desaturated-blue: hsl(235, 45%, 61%);
+  --Pale-Blue: hsl(236, 100%, 87%);
 }
+
+body {
+  background-color: var(--Very-dark-blue);
+  
+}
+
 
 
